@@ -44,6 +44,11 @@
 #define mb()  __asm__ __volatile__ ( "mfence" : : : "memory")
 #define rmb() __asm__ __volatile__ ( "lfence" : : : "memory")
 #define wmb() __asm__ __volatile__ ( "" : : : "memory")
+#elif defined(__arm__)
+/* ToDo: Anything? */
+#define mb()
+#define rmb()
+#define wmb()
 #else
 #error "Define barriers"
 #endif
